--- a/profile_A.html
+++ b/profile_A.html
@@ -1,5 +1,16 @@
-<p>盛岡ビジネス＆デザイン専門学校</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>盛岡ビジネス＆デザイン専門学校</p>
 <p>情報システム科</p>
 <p>嶺岸海希</p>
 <p>趣味・遊戯王</p>
 <p>一言・ピュアリーのデッキは最高だぜ！</p>
+    
+</body>
+</html>
