--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 Hello Git World!
-<a href="profile_A.html">Aさんの氏名プロフィール</a>
-<a href="profile_B.html">Bさんの氏名プロフィール</a>
+<a href="profile_A.html">嶺岸海希</a>
+<a href="profile_B.html">佐藤歩夢</a>
