--- a/profile_B.html
+++ b/profile_B.html
@@ -1,5 +1,15 @@
-<p>盛岡情報＆ビジネス専門学校</p>
-<p>情報システム科</p>
-<p>佐藤歩夢</p>
-<p>趣味・遊戯王</p>
-<p>一言・蟲惑魔かわいい</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>盛岡情報＆ビジネス専門学校</p>
+    <p>情報システム科</p>
+    <p>佐藤歩夢</p>
+    <p>趣味・遊戯王</p>
+    <p>一言・蟲惑魔かわいい</p>
+</body>
+</html>
