--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-Hello Git World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>Hello Git World!</p>
 <a href="profile_A.html">嶺岸海希</a>
 <a href="profile_B.html">佐藤歩夢</a>
+    
+</body>
+</html>
+
+
+
+
